# Habits_Tracker

./: .coveragerc  .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
tracker/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  0002_habit_owner.py  0003_alter_habit_owner_alter_habit_periodicity_in_days.py
users/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
